# the-architect

./: .env.example  .gitignore  Dockerfile  __init__.py  cli.py  docker-compose.yml  main.py  pyproject.toml  setup.sh
bridges/: __init__.py  cloud_bridge.py  local_bridge.py
config/: __init__.py  settings.py
core/: __init__.py  budget_controller.py  iteration_engine.py  model_router.py  task_manager.py
guardrails/: __init__.py  kernel.py
models/: __init__.py  budget.py  task.py
modules/: __init__.py
tasks/: __init__.py  example-beacon.yaml  thesis_engine_v2_reference.py
utils/: __init__.py  complexity.py  yaml_parser.py
